tests/Semantic/test_2_r01.out
Error type 1 at Line 5: undefined variable: x3
