tests/Semantic/test_2_r01.spl
int test_2_r01()
{
  int x1 = 5;
  int x2 = 3;
  int x4 = x1 + x3;
  return 0;
}
